<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/slider"
            layout="@layout/view_slider" />

        <TextView
            android:id="@+id/live_matches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/slider"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/live_matches"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvViewAllLiveMatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/slider"
            android:layout_alignParentRight="true"
            android:layout_marginTop="12dp"
            android:text="@string/view_all"
            android:textColor="@color/green_main" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_live_matches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/live_matches" />


        <TextView
            android:id="@+id/upcoming_matches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recycler_view_live_matches"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/upcoming_matches"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_all_upcoming_matches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recycler_view_live_matches"
            android:layout_alignParentRight="true"
            android:layout_marginTop="12dp"
            android:text="@string/view_all"
            android:textColor="@color/green_main" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_fixtures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_below="@id/upcoming_matches" />

    </RelativeLayout>

</ScrollView>


